--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,7 @@
 # Set diff handlers for Python files.
 *.py text diff=python
 
+# Copied from tutorial at https://help.github.com/articles/dealing-with-line-endings.
+# Declare files that will always have CRLF line endings on checkout.
+*.sln text eol=crlf
+*.pyproj text eol=crlf
