--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ install:
   - pip install -r requirements.txt
   - cd ./src/qinfer
 script:
-  - nosetests --with-coverage --cover-package=qinfer
+  - py.test --cov=.
 
 after_success:
   - coveralls
