--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,8 @@ before_install:
 install:
   - conda install --yes python=$TRAVIS_PYTHON_VERSION atlas numpy scipy matplotlib nose dateutil pandas statsmodels scikit-learn
   - pip install -r requirements.txt
-  - cd ./src
+  - python setup.py install
+  - cd src/
 script:
   - py.test --cov-config .coveragerc --cov=qinfer
   - pylint --py3k qinfer/
