Added version.py to gitignore.

--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ doc/_build
 
 ## setup.py generated files ##
 MANIFEST
+src/qinfer/version.py
 
 # The following ignores are drawn from github@github:gitignore/Python.gitignore.
 *.py[cod]
