--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,12 @@ install:
   - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib scikit-learn sphinx
   - pip install -r requirements.txt
   - python setup.py install
+  # We need to run doctest, which requires installing at least what
+  # ReadTheDocs has. That said, we require that QInfer installs
+  # without the use of the additional optional libraries listed
+  # in rtd-requirements.txt, so we place this install command
+  # after the primary installation above.
+  - pip install -r doc/rtd-requirements.txt
   - cd src/
 
 script:
