--- a/.gitignore
+++ b/.gitignore
@@ -56,6 +56,7 @@ pip-log.txt
 # Unit test / coverage reports
 .coverage
 .tox
+.cache
 nosetests.xml
 
 #Translations
@@ -63,3 +64,6 @@ nosetests.xml
 
 #Mr Developer
 .mr.developer.cfg
+
+# cprofile profile file
+profile
