--- a/.travis.yml
+++ b/.travis.yml
@@ -48,7 +48,7 @@ install:
   - cd src/
 
 script:
-  - py.test --cov-config .coveragerc --cov=qinfer src/qinfer/
+  - py.test --cov-config .coveragerc --cov=qinfer qinfer/
   - pylint --py3k qinfer/
   - if [[ "${DOCTEST}" == "1" ]]; then
       cd $TRAVIS_BUILD_DIR/doc;
