--- a/.travis.yml
+++ b/.travis.yml
@@ -29,9 +29,11 @@ before_install:
   - export PATH=$HOME/miniconda/bin:$PATH
   - export PATH=$HOME/miniconda:$PATH
   - conda update --yes conda
+  - conda create -n=travis python=$TRAVIS_PYTHON_VERSION
+  - source activate travis
 
 install:
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib scikit-learn sphinx
+  - conda install --yes numpy scipy matplotlib scikit-learn sphinx
   - pip install -r requirements.txt
   - python setup.py install
   # We need to run doctest, which requires installing at least what
