Enabled building TeX in doctest mode.

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,11 @@ python:
   - "3.4"
   - "3.5"
 
+addons:
+  apt:
+    packages:
+      - texlive
+
 # Explicitly add doctest support as separate parts of the build matrix,
 # since these tests require additional packages that should be optional.
 matrix:
@@ -55,6 +60,7 @@ script:
   - if [[ "${DOCTEST}" == "1" ]]; then
       cd $TRAVIS_BUILD_DIR/doc;
       make doctest;
+      make latexpdf;
     fi
 
 after_success:
