Added packages required by sphinx latex bld.

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ addons:
   apt:
     packages:
       - texlive
+      - texlive-latex-extra
 
 # Explicitly add doctest support as separate parts of the build matrix,
 # since these tests require additional packages that should be optional.
