--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ before_install:
 
 install:
   - conda install --yes numpy scipy matplotlib scikit-learn sphinx
+  - conda update --yes conda
   - pip install -r requirements.txt
   - python setup.py install
   # We need to run doctest, which requires installing at least what
