--- a/.travis.yml
+++ b/.travis.yml
@@ -40,8 +40,8 @@ before_install:
   - source activate travis
 
 install:
-  - conda install --yes numpy scipy matplotlib scikit-learn sphinx
-  - conda update --yes --all
+  # Qt 4.8.7 has been causing build failures, so we disable it.
+  - conda install --yes numpy scipy matplotlib scikit-learn sphinx qt=4.8.6
   - pip install -r requirements.txt
   # Before proceeding, we pause to list all installed conda and pip
   # packages for later debugging.
