--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ matrix:
 
 env:
   global:
+    - MPL_BACKEND: Agg
     - secure: 
 
 notifications:
@@ -40,8 +41,10 @@ before_install:
   - source activate travis
 
 install:
-  # Qt 4.8.7 has been causing build failures, so we disable it.
-  - conda install --yes numpy scipy matplotlib=1.4 scikit-learn sphinx qt=4.8.6 sip=4.16.5
+  - conda install --yes numpy scipy matplotlib scikit-learn sphinx
+  # Before proceeding to install anything else, we debu
+  # by making sure that the conda install didn't break matplotlib.
+  - python -c "import matplotlib.pyplot as plt"
   - pip install -r requirements.txt
   # Before proceeding, we pause to list all installed conda and pip
   # packages for later debugging.
