--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,9 @@ python:
 addons:
   apt:
     packages:
+      # QuTiP builds are currently broken under very old versions
+      # of GCC, such as are installed by default with Travis CI.
+      - gcc-4.8
       - texlive
       - texlive-latex-extra
       - texlive-fonts-extra
