--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ python:
 
 addons:
   apt:
+    sources:
+      - ubuntu-toolchain-r-test
     packages:
       # QuTiP builds are currently broken under very old versions
       # of GCC, such as are installed by default with Travis CI.
