--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ description-file = README.rst
 [bdist_wheel]
 universal = 1
 
-[pytest]
+[tool:pytest]
 python_files=tests/*.py
 python_classes=Test
 python_functions=*_test
