--- a/.travis.yml
+++ b/.travis.yml
@@ -70,11 +70,10 @@ install:
       pip install cython;
       pip install -r doc/rtd-requirements.txt;
     fi
-  - cd src/
 
 script:
-  - py.test --cov-config .coveragerc --cov=qinfer qinfer/
-  - pylint --py3k qinfer/
+  - py.test --cov-config .coveragerc --cov=qinfer src/qinfer/
+  - pylint --py3k src/qinfer/
   - if [[ "${DOCTEST}" == "1" ]]; then
       cd $TRAVIS_BUILD_DIR/doc;
       make doctest;
