make travis update pip before using pip

--- a/.travis.yml
+++ b/.travis.yml
@@ -53,6 +53,7 @@ install:
   # Before proceeding to install anything else, we debu
   # by making sure that the conda install didn't break matplotlib.
   - python -c "import matplotlib.pyplot as plt; print('Using MPL backend:'); print(plt.get_backend())" 
+  - pip install --upgrade pip
   - pip install -r requirements.txt
   # Before proceeding, we pause to list all installed conda and pip
   # packages for later debugging.
