added a request for pdflatex nonstop mode, not sure if this will work

--- a/.travis.yml
+++ b/.travis.yml
@@ -79,7 +79,7 @@ script:
   - if [[ "${DOCTEST}" == "1" ]]; then
       cd $TRAVIS_BUILD_DIR/doc;
       make doctest;
-      make latexpdf;
+      make latexpdf LATEXOPTS="--interaction=nonstopmode";
     fi
 
 after_success:
